#4 Hero - fixes for PR comments on hero image being too large, non-clickable buttons on desktop, package.json and package-lock

--- a/aemedge/blocks/hero/hero.css
+++ b/aemedge/blocks/hero/hero.css
@@ -13,6 +13,10 @@ main .hero-container:nth-of-type(2) .hero-wrapper:first-of-type {
 .hero {
   position: relative;
   min-height: 300px;
+  max-height: 600px;
+  max-width: 1920px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero div div {
@@ -26,7 +30,8 @@ main .hero-container:nth-of-type(2) .hero-wrapper:first-of-type {
 }
 
 .hero picture, .hero img {
-  min-height: 56vw;
+  height: 56vw;
+  max-height: 600px;
   box-sizing: border-box;
   object-fit: cover;
   overflow: hidden;
@@ -41,6 +46,7 @@ main .hero-container:nth-of-type(2) .hero-wrapper:first-of-type {
   text-align: center;
   width: 100%;
   margin: 0.25em 0;
+  z-index: 10;
 }
 
 .hero p.button-container a:first-of-type {
